<resources>
    <string name="app_name">Vela</string>
    <string name="title_markets">Markets</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_alerts">Alerts</string>

    <string name="error_no_internet">No internet connection</string>
    <string name="error_server">Server error, please try again</string>
    <string name="error_unknown">Something went wrong</string>
    <string name="action_retry">Try Again</string>
    <string name="action_cancel">Cancel</string>

    <string name="nav_home">Home</string>
    <string name="nav_markets">Markets</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="nav_search">Search</string>
    <string name="nav_alerts">Alerts</string>

    <string name="hint_search">Search coins\u2026</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="label_search_empty">Start typing to search</string>
    <string name="label_no_results">No results for "%s"</string>

    <string name="title_category">Category</string>
    <string name="title_sort_by">Sort by</string>
    <string name="label_sort_market_cap">Market Cap</string>
    <string name="label_sort_volume">Volume</string>

    <string name="cd_back">Back</string>
    <string name="cd_watchlist">Watchlist</string>
    <string name="label_market_cap">Market Cap</string>
    <string name="label_24h_volume">24h Volume</string>
    <string name="label_circulating_supply">Circulating Supply</string>
    <string name="label_ath">All Time High</string>
    <string name="label_atl">All Time Low</string>
    <string name="label_no_chart_data">No chart data available</string>
    <string name="cd_fullscreen_chart_open">Open fullscreen chart</string>
    <string name="cd_fullscreen_chart_close">Close fullscreen chart</string>
    <string name="label_watchlist_empty_title">No coins yet</string>
    <string name="label_watchlist_empty_subtitle">Tap the star on any coin to add it here</string>

    <string name="label_alert_type_price">Price</string>
    <string name="label_alert_type_percent">% Change</string>
    <string name="label_alert_direction_above">Above</string>
    <string name="label_alert_direction_below">Below</string>
    <string name="hint_alert_price_value">Target price</string>
    <string name="hint_alert_percent_value">Target %% change</string>
    <string name="action_create_alert">Add Alert</string>
    <string name="action_edit_alert">Edit Alert</string>
    <string name="label_alerts_empty_title">No alerts yet</string>
    <string name="label_alerts_empty_subtitle">Go to a coin\'s detail screen and tap the Alerts tab to add one</string>
    <string name="label_alert_triggered">Triggered</string>
    <string name="label_tab_stats">Stats</string>
    <string name="label_tab_alerts">Alerts</string>
    <string name="action_delete_alert">Delete Alert</string>
</resources>
